<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="app_name">IapApiSample</string>
    <string name="menu_settings">Settings</string>
    <string name="title_command">Command</string>
    <string name="title_payment">Payment</string>
    <string name="title_appid">AppId: </string>
    <string name="title_productid">ProductId: </string>
    <string name="title_tid">TID: </string>
    <string name="title_productname">ProductName: </string>
    <string name="title_bpinfo">BP Info: </string>
    <string name="edit_product_hint">delimiter \',\'</string>
    <string name="btn_payment_execute">sendPaymentRequest</string>
    <string name="title_method">Method: </string>
    <string name="title_app">AppId: </string>
    <string name="title_product">ProductId: </string>
    <string name="title_action">Action: </string>
    <string name="spinner_method">Choose a method</string>
	<string name="btn_query_execute">Query Request</string>
    
    <string-array name="methods">
        <item>auth_item</item>
        <item>whole_auth_item</item>
        <item>item_use</item>
        <item>monthly_withdraw</item>
        <item>request_purchase_history</item>
        <item>request_product_info</item>
        <item>check_purchasability</item>
        <item>change_product_properties</item>
    </string-array>

    <string name="spinner_action">Choose a action</string>

    <string-array name="actions">
        <item>cancel_subscription</item>
        <item>subtract_points</item>
    </string-array>
    
    
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
</resources>
