<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:id="@+id/control_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/title_appid" />

                    <EditText
                        android:id="@+id/edit_appid"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="textCapCharacters" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/title_productid" />

                    <EditText
                        android:id="@+id/edit_product"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="textCapCharacters" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/title_productname" />

                    <EditText
                        android:id="@+id/edit_productname"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/title_tid" />

                    <EditText
                        android:id="@+id/edit_tid"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/title_bpinfo" />

                    <EditText
                        android:id="@+id/edit_bpinfo"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/btn_payment_request"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/btn_payment_execute">
                </Button>
            </LinearLayout>
            	<Button
                    android:id="@+id/btn_manager_request"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="manager_request">
                </Button>           
        </LinearLayout>

        <TextView
            android:id="@+id/logview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="1dip"
            android:background="@drawable/border" />
    </LinearLayout>

</ScrollView>